force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/tc9_pr__Payee_Leave_Event__c.object-meta.xml
<CustomObject>
    <label>Payee Leave Event</label>
    <nameField>
        <displayFormat>PLE-{0000000000}</displayFormat>
        <label>Payee Leave Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Leave Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>