force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/Cancellation_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Request</label>
    <type>Checkbox</type>
</CustomField>