force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/Custom_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Custom_Approval_Status__c</fullName>
    <formula>TEXT(tc9_pr__Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Approval Status</label>
    <type>Text</type>
</CustomField>