force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EndTime</valueSetName>
    </valueSet>
</CustomField>