force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/Leave_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Leave_Approver_Email__c</fullName>
    <label>Leave Approver Email</label>
    <type>Email</type>
</CustomField>