force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/Leave_Type_Full_Part_Day__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Full_Part_Day__c</fullName>
    <label>Leave Type (Full/Part Day)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Part Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>