force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/Reset_Leave_Event__c.field-meta.xml
<CustomField>
    <fullName>Reset_Leave_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Leave event created to reset balance</inlineHelpText>
    <label>Reset Leave Event</label>
    <type>Checkbox</type>
</CustomField>