force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/Start_Time_Number__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Number__c</fullName>
    <formula>case(Start_Time__c,
&apos;12:00 AM&apos;, 0.0,
&apos;12:15 AM&apos;, 0.25,
&apos;12:30 AM&apos;, 0.50,
&apos;12:45 AM&apos;, 0.75,
&apos;1:00 AM&apos;, 1.0,
&apos;1:15 AM&apos;, 1.25,
&apos;1:30 AM&apos;, 1.50,
&apos;1:45 AM&apos;, 1.75,
&apos;2:00 AM&apos;, 2.0,
&apos;2:15 AM&apos;, 2.25,
&apos;2:30 AM&apos;, 2.50,
&apos;2:45 AM&apos;, 2.75,
&apos;3:00 AM&apos;, 3.0,
&apos;3:15 AM&apos;, 3.25,
&apos;3:30 AM&apos;, 3.50,
&apos;3:45 AM&apos;, 3.75,
&apos;4:00 AM&apos;, 4.0,
&apos;4:15 AM&apos;, 4.25,
&apos;4:30 AM&apos;, 4.50,
&apos;4:45 AM&apos;, 4.75,
&apos;5:00 AM&apos;, 5.0,
&apos;5:15 AM&apos;, 5.25,
&apos;5:30 AM&apos;, 5.50,
&apos;5:45 AM&apos;, 5.75,
&apos;6:00 AM&apos;, 6.0,
&apos;6:15 AM&apos;, 6.25,
&apos;6:30 AM&apos;, 6.50,
&apos;6:45 AM&apos;, 6.75,
&apos;7:00 AM&apos;, 7.0,
&apos;7:15 AM&apos;, 7.25,
&apos;7:30 AM&apos;, 7.50,
&apos;7:45 AM&apos;, 7.75,
&apos;8:00 AM&apos;, 8.0,
&apos;8:15 AM&apos;, 8.25,
&apos;8:30 AM&apos;, 8.50,
&apos;8:45 AM&apos;, 8.75,
&apos;9:00 AM&apos;, 9.0,
&apos;9:15 AM&apos;, 9.25,
&apos;9:30 AM&apos;, 9.50,
&apos;9:45 AM&apos;, 9.75,
&apos;10:00 AM&apos;, 10.0,
&apos;10:15 AM&apos;, 10.25,
&apos;10:30 AM&apos;, 10.50,
&apos;10:45 AM&apos;, 10.75,
&apos;11:00 AM&apos;,11.0,
&apos;11:15 AM&apos;, 11.25,
&apos;11:30 AM&apos;, 11.50,
&apos;11:45 AM&apos;, 11.75,
&apos;12:00 PM&apos;, 12.0,
&apos;12:15 PM&apos;, 12.25,
&apos;12:30 PM&apos;, 12.50,
&apos;12:45 PM&apos;, 12.75,
&apos;1:00 PM&apos;, 13.0,
&apos;1:15 PM&apos;, 13.25,
&apos;1:30 PM&apos;, 13.50,
&apos;1:45 PM&apos;, 13.75,
&apos;2:00 PM&apos;, 14.0,
&apos;2:15 PM&apos;, 14.25,
&apos;2:30 PM&apos;, 14.50,
&apos;2:45 PM&apos;, 14.75,
&apos;3:00 PM&apos;, 15.0,
&apos;3:15 PM&apos;, 15.25,
&apos;3:30 PM&apos;, 15.50,
&apos;3:45 PM&apos;, 15.75,
&apos;4:00 PM&apos;, 16.0,
&apos;4:15 PM&apos;, 16.25,
&apos;4:30 PM&apos;, 16.50,
&apos;4:45 PM&apos;, 16.75,
&apos;5:00 PM&apos;, 17.0,
&apos;5:15 PM&apos;, 17.25,
&apos;5:30 PM&apos;, 17.50,
&apos;5:45 PM&apos;, 17.75,
&apos;6:00 PM&apos;, 18.0,
&apos;6:15 PM&apos;, 18.25,
&apos;6:30 PM&apos;, 18.50,
&apos;6:45 PM&apos;, 18.75,
&apos;7:00 PM&apos;, 19.0,
&apos;7:15 PM&apos;, 19.25,
&apos;7:30 PM&apos;, 19.50,
&apos;7:45 PM&apos;, 19.75,
&apos;8:00 PM&apos;, 20.0,
&apos;8:15 PM&apos;, 20.25,
&apos;8:30 PM&apos;, 20.50,
&apos;8:45 PM&apos;, 20.75,
&apos;9:00 PM&apos;, 21.0,
&apos;9:15 PM&apos;, 21.25,
&apos;9:30 PM&apos;, 21.50,
&apos;9:45 PM&apos;, 21.75,
&apos;10:00 PM&apos;,22.0,
&apos;10:15 PM&apos;, 22.25,
&apos;10:30 PM&apos;, 22.50,
&apos;10:45 PM&apos;, 22.75,
&apos;11:00 PM&apos;, 23.0,
&apos;11:15 PM&apos;, 23.25,
&apos;11:30 PM&apos;, 23.50,
&apos;11:45 PM&apos;, 23.75,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>