force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_et__Leave_Credit_Expiry__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Leave_Credit_Expiry__c</fullName>
    <formula>tc9_pr__Start_Date__c + tc9_pr__Payee_Leave_Rule__r.tc9_pr__Leave_Rule__r.tc9_pr__Time_Off_in_Lieu_Expiry_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Credit Expiry</label>
    <type>Date</type>
</CustomField>