force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_et__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines if the Payee Leave Event is related to a specific Timesheet</description>
    <inlineHelpText>Defines if the Payee Leave Event is related to a specific Timesheet</inlineHelpText>
    <label>Timesheet</label>
    <referenceTo>tc9_et__Timesheet__c</referenceTo>
    <relationshipLabel>Payee Leave Events</relationshipLabel>
    <relationshipName>Payee_Leave_Events</relationshipName>
    <type>Lookup</type>
</CustomField>