force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_et__Timesheet_Entry__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Timesheet_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Timesheet Entry related to this Payee Leave Event</description>
    <inlineHelpText>The Timesheet Entry related to this Payee Leave Event</inlineHelpText>
    <label>Timesheet Entry</label>
    <referenceTo>tc9_et__Timesheet_Entry__c</referenceTo>
    <relationshipLabel>Payee Leave Events</relationshipLabel>
    <relationshipName>Payee_Leave_Events</relationshipName>
    <type>Lookup</type>
</CustomField>