force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_et__TOIL_Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__TOIL_Pay_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To populate with the related TOIL pay transaction</description>
    <inlineHelpText>To populate with the related TOIL pay transaction</inlineHelpText>
    <label>TOIL Pay Transaction</label>
    <referenceTo>tc9_pr__Pay_Transaction__c</referenceTo>
    <relationshipLabel>Payee Leave Events</relationshipLabel>
    <relationshipName>Payee_Leave_Events</relationshipName>
    <type>Lookup</type>
</CustomField>