force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Advance_Pay_End_Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Advance_Pay_End_Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The last payroll calendar period of an advance pay Payee Leave Event.</description>
    <inlineHelpText>The last payroll calendar period of an advance pay Payee Leave Event.</inlineHelpText>
    <label>Advance Pay End Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payee Leave Events (Advance Pay End Calendar Period)</relationshipLabel>
    <relationshipName>Payee_Leave_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>