force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Advance_Pay_Payment_Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Advance_Pay_Payment_Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The calendar period in which payment will be made for an advance pay Payee Leave Event.</description>
    <inlineHelpText>The calendar period in which payment will be made for an advance pay Payee Leave Event.</inlineHelpText>
    <label>Advance Pay Payment Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payee Leave Events (Advance Pay Payment Calendar Period)</relationshipLabel>
    <relationshipName>Payee_Leave_Events4</relationshipName>
    <type>Lookup</type>
</CustomField>