force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Alternative_Approver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Alternative_Approver_First_Name__c</fullName>
    <description>The Alternative Leave Approvers First Name. Used on email templates</description>
    <formula>tc9_pr__Assignment__r.tc9_pr__Alternative_Leave_Approver__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Alternative Leave Approvers First Name. Used on email templates</inlineHelpText>
    <label>Alternative Approver First Name</label>
    <type>Text</type>
</CustomField>