force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Approved_By__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Approved_By__c</fullName>
    <description>The name of the manager who approved the Payee Leave Event</description>
    <inlineHelpText>The name of the manager who approved the Payee Leave Event</inlineHelpText>
    <label>Approved By</label>
    <type>TextArea</type>
</CustomField>