force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Approved_On__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Approved_On__c</fullName>
    <description>The Date/Time the manager approval was granted</description>
    <inlineHelpText>The Date/Time the manager approval was granted</inlineHelpText>
    <label>Approved On</label>
    <type>DateTime</type>
</CustomField>