force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the related Assignment</description>
    <inlineHelpText>A lookup to the related Assignment</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Payee Leave Events</relationshipLabel>
    <relationshipName>Payee_Leave_Events</relationshipName>
    <type>Lookup</type>
</CustomField>