force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the last Pay Calendar Period that applies to the Payee Leave Event. The value us automatically updated during Pay Batch Manager calculations</description>
    <inlineHelpText>Defines the last Pay Calendar Period that applies to the Payee Leave Event. The value us automatically updated during Pay Batch Manager calculations</inlineHelpText>
    <label>Pay Calendar Period</label>
    <referenceTo>tc9_pr__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payee Leave Events</relationshipLabel>
    <relationshipName>Payee_Leave_Events</relationshipName>
    <type>Lookup</type>
</CustomField>