force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Client_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Client_Name__c</fullName>
    <description>The Client Name. Used on email templates</description>
    <formula>tc9_pr__Assignment__r.tc9_pr__Client__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Client Name. Used on email templates</inlineHelpText>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>