force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Converted_Hours_to_Days__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Converted_Hours_to_Days__c</fullName>
    <description>Duration converted from hours to days</description>
    <formula>ROUND ( tc9_pr__Hours__c / tc9_pr__Payee_Leave_Rule__r.tc9_pr__Conversion_Average_Hours_per_Day__c , 6 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration converted from hours to days</inlineHelpText>
    <label>Converted Hours to Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>