force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Employee_Comments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee_Comments__c</fullName>
    <description>Comments about this Payee Leave Event that were entered by the Payee</description>
    <inlineHelpText>Comments about this Payee Leave Event that were entered by the Payee</inlineHelpText>
    <label>Employee Comments</label>
    <type>TextArea</type>
</CustomField>