force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Employee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee_First_Name__c</fullName>
    <description>The Employees First Name. Used on email templates</description>
    <formula>tc9_pr__Employee__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Employees First Name. Used on email templates</inlineHelpText>
    <label>Employee First Name</label>
    <type>Text</type>
</CustomField>