force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Employee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee_Full_Name__c</fullName>
    <description>The Employees Full Name. Used on email templates</description>
    <formula>tc9_pr__Employee__r.FirstName &amp; &quot; &quot; &amp; tc9_pr__Employee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Employees Full Name. Used on email templates</inlineHelpText>
    <label>Employee Full Name</label>
    <type>Text</type>
</CustomField>