force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__End_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__End_Date__c</fullName>
    <description>The End Date of the Payee Leave Event</description>
    <inlineHelpText>The End Date of the Payee Leave Event</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>