force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__End_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__End_Time__c</fullName>
    <description>This field is used to specify the end time for part-day leave requests and is populated by the employee during the application process. It is used to calculate the total hours for that part day.</description>
    <inlineHelpText>This field is used to specify the end time for part-day leave requests and is populated by the employee during the application process. It is used to calculate the total hours for that part day.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>