force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Exclude_From_Employee_Rejection_List__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Employee_Rejection_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if a Leave will be excluded from Bulk Employee Rejection listings. When TRUE the Leave will be excluded from Bulk Employee Rejection. Rejection emails can only be send on the individual basis via the Leaves</description>
    <inlineHelpText>Defines if a Leave will be excluded from Bulk Employee Rejection listings. When TRUE the Leave will be excluded from Bulk Employee Rejection. Rejection emails can only be send on the individual basis via the Leaves</inlineHelpText>
    <label>Exclude From Employee Rejection List</label>
    <type>Checkbox</type>
</CustomField>