force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Exclude_From_Employee_Reminder_List__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Employee_Reminder_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Payee Leave Event will not trigger employee reminders.</description>
    <inlineHelpText>Indicates that this Payee Leave Event will not trigger employee reminders.</inlineHelpText>
    <label>Exclude From Employee Reminder List</label>
    <type>Checkbox</type>
</CustomField>