force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Exclude_From_Primary_Approver_Remin_List__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Primary_Approver_Remin_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if an Leave will be excluded from Bulk Primary Approver Reminder listings. When TRUE the Leave will be excluded from Bulk Primary Approver Reminders. Reminders can only be send on the individual basis via the Leaves</description>
    <inlineHelpText>Defines if an Leave will be excluded from Bulk Primary Approver Reminder listings. When TRUE the Leave will be excluded from Bulk Primary Approver Reminders. Reminders can only be send on the individual basis via the Leaves</inlineHelpText>
    <label>Exclude From Primary Approver Remin List</label>
    <type>Checkbox</type>
</CustomField>