force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Hours__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Hours__c</fullName>
    <description>The duration of the Payee Leave Event in hours</description>
    <inlineHelpText>The duration of the Payee Leave Event in hours</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>