force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Hours_Remaining__c</fullName>
    <description>The number of hours remaining to be processed in payrun for this Payee Leave Event</description>
    <inlineHelpText>The number of hours remaining to be processed in payrun for this Payee Leave Event</inlineHelpText>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>