force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Last_Employee_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Last_Employee_Reminder_Sent__c</fullName>
    <description>Defines the Date/Time the last email was sent to remind the Employee to submit their Payee Leave Event</description>
    <inlineHelpText>Defines the Date/Time the last email was sent to remind the Employee to submit their Payee Leave Event</inlineHelpText>
    <label>Last Employee Reminder Sent</label>
    <type>DateTime</type>
</CustomField>