force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Last_Primary_Approver_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Last_Primary_Approver_Reminder_Sent__c</fullName>
    <description>Defines the Date/Time the last email was sent to remind the Primary Approver of the Leave awaiting approval</description>
    <inlineHelpText>Defines the Date/Time the last email was sent to remind the Primary Approver of the Leave awaiting approval</inlineHelpText>
    <label>Last Primary Approver Reminder Sent</label>
    <type>DateTime</type>
</CustomField>