force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Leave_Notification_From_Email__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Notification_From_Email__c</fullName>
    <description>The Leave Expense Claim Notification From Email as defined on the related notification setting. Used on email templates</description>
    <formula>IF (
NOT(ISBLANK(tc9_pr__Assignment__r.tc9_pr__Client__r.tc9_pr__Leave_Notification_Setting_Override__c)),
tc9_pr__Assignment__r.tc9_pr__Client__r.tc9_pr__Leave_Notification_Setting_Override__r.tc9_pr__Notification_From_Email_Address__c ,
tc9_pr__Assignment__r.tc9_pr__Schedule__r.tc9_pr__Leave_Notification_Setting__r.tc9_pr__Notification_From_Email_Address__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Leave Expense Claim Notification From Email as defined on the related notification setting. Used on email templates</inlineHelpText>
    <label>Leave Notification From Email</label>
    <type>Text</type>
</CustomField>