force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Type__c</fullName>
    <description>The Leave Type of the related Leave Rule.</description>
    <formula>tc9_pr__Payee_Leave_Rule__r.tc9_pr__Leave_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Leave Type of the related Leave Rule.</inlineHelpText>
    <label>Leave Type</label>
    <type>Text</type>
</CustomField>