force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Manager_Comments__c</fullName>
    <description>Comments about this Payee Leave Event that were entered by the approving manager</description>
    <inlineHelpText>Comments about this Payee Leave Event that were entered by the approving manager</inlineHelpText>
    <label>Manager Comments</label>
    <type>TextArea</type>
</CustomField>