force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Override_Insufficient_Service__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Insufficient_Service__c</fullName>
    <description>Acknowledgement that the Payee has insufficient service for this Leave Take to be created but there is a requirement to proceed with its creation</description>
    <inlineHelpText>Acknowledgement that the Payee has insufficient service for this Leave Take to be created but there is a requirement to proceed with its creation</inlineHelpText>
    <label>Override Insufficient Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>