force-app/main/default/objects/tc9_pr__Payee_Leave_Event__c/fields/tc9_pr__Override_Leave_Balance_Validation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Override_Leave_Balance_Validation__c</fullName>
    <description>Indicates that the payee leave balance will not be validated when a Leave Take is created.</description>
    <inlineHelpText>Indicates that the payee leave balance will not be validated when a Leave Take is created.</inlineHelpText>
    <label>Override Leave Balance Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>